<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.photogallery.SearchActivity">

    <EditText
        android:id="@+id/keywordText"
        android:layout_width="242dp"
        android:layout_height="41dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/keyword_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/startDateText"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/date_hint"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="@+id/keywordText"
        app:layout_constraintTop_toBottomOf="@+id/keywordText" />

    <EditText
        android:id="@+id/endDateText"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/date_hint"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/keywordText"
        app:layout_constraintTop_toBottomOf="@+id/keywordText" />

    <EditText
        android:id="@+id/topLatText"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/lat_Hint"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/startDateText"
        app:layout_constraintTop_toBottomOf="@+id/startDateText" />

    <EditText
        android:id="@+id/topLongText"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/long_hint"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/endDateText"
        app:layout_constraintTop_toBottomOf="@+id/endDateText" />

    <EditText
        android:id="@+id/btmLatText"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/lat_Hint"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/topLatText"
        app:layout_constraintTop_toBottomOf="@+id/topLatText" />

    <EditText
        android:id="@+id/btmLongText"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/long_hint"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/topLongText"
        app:layout_constraintTop_toBottomOf="@+id/topLongText" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="304dp"
        android:onClick="search"
        android:text="@string/search_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keywordText" />

    <TextView
        android:id="@+id/startDateView"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/startDate_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/keywordText"
        app:layout_constraintTop_toBottomOf="@+id/keywordText" />

    <TextView
        android:id="@+id/endDateView"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/endDate_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/keywordText"
        app:layout_constraintTop_toBottomOf="@+id/keywordText" />

    <TextView
        android:id="@+id/topLeftView"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/topLeft_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/startDateText"
        app:layout_constraintTop_toBottomOf="@+id/startDateText" />

    <TextView
        android:id="@+id/bottomRightView"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/bottomRight_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/topLatText"
        app:layout_constraintTop_toBottomOf="@+id/topLatText" />

</android.support.constraint.ConstraintLayout>
