<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.photogallery.GalleryActivity">

    <TextView
        android:id="@+id/timeText"
        android:layout_width="147dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:inputType="none"
        android:text="@string/timestamp_text"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/galleryView"
        app:layout_constraintTop_toBottomOf="@+id/galleryView" />

    <TextView
        android:id="@+id/geoText"
        android:layout_width="147dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/geotag_text"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/galleryView"
        app:layout_constraintTop_toBottomOf="@+id/galleryView" />

    <EditText
        android:id="@+id/captionText"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/caption_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/galleryView" />

    <ImageView
        android:id="@+id/galleryView"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/gallery_view"
        android:cropToPadding="false"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/leftButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:onClick="lastPicture"
        android:text="@string/left_button"
        app:layout_constraintStart_toStartOf="@+id/captionText"
        app:layout_constraintTop_toTopOf="@+id/captionText" />

    <Button
        android:id="@+id/rightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:onClick="nextPicture"
        android:text="@string/right_button"
        app:layout_constraintEnd_toEndOf="@+id/captionText"
        app:layout_constraintTop_toTopOf="@+id/captionText" />

    <Button
        android:id="@+id/snapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:onClick="takePicture"
        android:text="@string/snap_button"
        app:layout_constraintEnd_toStartOf="@+id/rightButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/leftButton"
        app:layout_constraintTop_toTopOf="@+id/captionText" />

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/upload_button"
        app:layout_constraintStart_toStartOf="@+id/leftButton"
        app:layout_constraintTop_toBottomOf="@+id/leftButton" />

    <Button
        android:id="@+id/filterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="filterPhotos"
        android:text="@string/filter_button"
        app:layout_constraintEnd_toEndOf="@+id/rightButton"
        app:layout_constraintTop_toBottomOf="@+id/rightButton" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:onClick="saveCaption"
        android:text="@string/save_button"
        app:layout_constraintEnd_toStartOf="@+id/filterButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/uploadButton"
        app:layout_constraintTop_toBottomOf="@+id/snapButton" />

</android.support.constraint.ConstraintLayout>
